<resources>
    <string name="app_name">Expenses Manager</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="menu_action_report">Total report</string>
    <string name="menu_action_submit">Expense Submit</string>
    <string name="menu_action_summary">Monthly summary</string>
    <string name="menu_action_setting">Settings</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="required">*Required</string>
    <string name="rate">Rate</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="optional">Optional</string>
    <string name="note">Note</string>
    <string name="submit">Submit</string>
    <string name="total_amount">Total Amount</string>
    <string name="overall">Overall</string>
    <string name="sum">Sum</string>
    <string name="password">Password:</string>
    <string name="def_pass">123456789</string>
    <string name="enter">Enter</string>
    <string name="settings">Settings</string>
    <string name="new_password">new password</string>
    <string name="base">Base</string>
    <string name="edit_category">Edit Category</string>
    <string name="save">save</string>
    <string name="remove">Remove</string>
    <string name="add_category">Add Category</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="enter_new_password">New Password</string>
    <string name="enter_new_password_again">New Password again</string>
    <string name="save_to_calendar">Save to calendar</string>
</resources>
