<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:fillViewport="true"
    tools:context=".Activities.ExpenseSubmitActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="setDate"
                android:textColor="@color/colorDarkRed"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="setTime"
                android:textColor="@color/colorDarkRed"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/required"
            android:inputType="numberDecimal"
            android:maxLength="20"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/currencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3sp"
                android:layout_marginTop="5sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rate"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rate"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/category"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3sp"
                android:layout_marginTop="11sp"
                android:layout_weight="2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="editCatClick"
                android:text="@string/edit" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbToCalendar"
            android:text="@string/save_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="submitClick"
            android:text="@string/submit"
            android:textSize="25sp" />

    </LinearLayout>
</ScrollView>

