<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/RemoveCategorySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bRemove"
            android:onClick="editCatSpinner"
            android:text="@string/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etAddCat"
            android:hint="@string/add_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/bAdd"
            android:onClick="editCatSpinner"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

</LinearLayout>